<resources>
    <string name="app_name">SMKC COVID</string>
    <string name="dashboard">Dashboard</string>
    <string name="cases">Cases</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="total_cases">Total cases</string>
    <string name="total_recovered">Total recovered</string>
    <string name="total_deaths">Total deaths</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="latest_news">Latest News</string>
    <string name="what_is_covid">What is COVID-19?</string>
    <string name="what_symptoms">What are the symptoms?</string>
    <string name="how_to_prevent">How can I prevent it?</string>
    <string name="notification">Daily Notification</string>
    <string name="total">Worldwide Total</string>
    <string name="stats">Ranking</string>
    <string name="positive">Positive</string>
    <string name="summary">Summary</string>
    <string name="global">Worldwide</string>
    <string name="general">General</string>
    <string name="country">Country</string>
    <string name="select_country">Select Country</string>
    <string name="select_language">Select Language</string>
    <string name="learn">Tap here to learn about COVID-19 and ways to protect yourself and others around you.</string>
    <string name="how">How does it spread?</string>
    <string name="prevent">How can I prevent the spread?</string>
    <string name="what2"><b>Coronavirus disease (COVID-19)</b> is a <b>highly infectious disease</b> caused by a newly discovered coronavirus.\n\nMost people who fall sick with COVID-19 will experience <b>mild to moderate symptoms</b> and recover without special treatment.</string>
    <string name="what3">The virus that causes COVID-19 is mainly transmitted through droplets generated when an <b>infected person coughs, sneezes, or exhales.</b>\n\nYou can also be infected by <b>breathing in the virus if you are within close proximity of someone who has COVID-19, or by touching a contaminated surface and then your eyes, nose or mouth.</b></string>
    <string name="what4">Most common symptoms are:
                            <b>\n- fever
                                \n- dry cough
                                \n- tiredness</b>
                            \n\nLess common symptoms:
                            <b>\n- aches and pains
                                \n- sore throat
                                \n- diarrhea
                                \n- headache
                                \n- loss of taste or smell</b>
                            \n\nSerious symptoms:
                            <b>\n- difficulty breathing or shortness of breath
                                \n- chest pain or pressure
                                \n- loss of speech or movement
                            \n\nSeek immediate medical attention if you have serious symptoms.</b> Always call before visiting your doctor or health facility.
                            \n\nPeople with mild symptoms who are otherwise healthy and <b>should manage their symptoms at home.</b>
    </string>
    <string name="what5">Proper hand washing means washing your hands for at least <b>20-30 seconds with soap and water.</b> The constant rubbing action helps soap break down the grease and dirt that carry most germs.</string>
    <string name="what6">The simplest thing you can do is to <b>stay at home</b> to avoid physical contact and only go outside when it is <b>truly necessary.</b></string>
    <string name="what7">When you\'re outside, wear a mask, avoid crowds, and maintain at least 1-meter away from others to prevent the spread.</string>
    <string name="today">today</string>
    <string name="presented">*The presented data are from last 7 days</string>
    <string name="close">Try again</string>
    <string name="offline">It looks like you don\'t have any internet connection right now. Might want to try again later.</string>
    <string name="offline_title">You seemed to be offline</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="yesterday">" since yesterday"</string>
    <string name="more_info">*Tap the box for more info</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="updated">Updated on:</string>
    <string name="morning">Good morning</string>
    <string name="afternoon">Good afternoon</string>
    <string name="evening">Good evening</string>
    <string name="url_copied">URL copied to clipboard</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_in" translatable="false">Sign in</string>
    <string name="sign_up" translatable="false">Sign up</string>
    <string name="sign_out" translatable="false">Sign out</string>
    <string name="forgot">Forgot password?</string>
    <string name="skip">Skip</string>
    <string name="tap">Tap here</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="name">Name</string>
    <string name="confirm" translatable="false">Confirm password</string>
    <string name="submit" translatable="false">Submit</string>

    <string name="account">Account</string>
    <string name="maps_title">Check The Spread with Maps</string>
    <string name="maps_body">Tap here to use maps to check COVID-19 spread around the globe.</string>
    <string name="title_activity_maps" translatable="false">Map</string>

    <string name="information">Information</string>
    <string name="search">Search for country name…</string>
</resources>
