<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity"
    android:background="@drawable/gradient_bg">
    <ImageView
        android:id="@+id/iv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:src="@drawable/bg_what"
        android:scaleType="fitStart"
        android:alpha="0.6"
        android:scaleY="-1"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:translationZ="10dp"
        android:layout_marginBottom="-15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@drawable/rounded"
            android:gravity="end"
            android:backgroundTint="?onAccent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    style="@style/Title"/>
            </RelativeLayout>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_nama_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="0dp"
                android:textColor="@color/white"
                android:shadowColor="@color/black"
                android:textColorHint="@color/hint"
                android:hint="@string/name"
                android:inputType="text|textCapWords"
                android:textSize="16sp"
                />
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:shadowColor="@color/black"
                android:textColorHint="@color/hint"
                android:hint="@string/email"
                android:inputType="text|textCapWords"
                android:textSize="16sp"
                />
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:shadowColor="@color/black"
                android:textColorHint="@color/hint"
                android:hint="@string/password"
                android:inputType="text|textCapWords"
                android:textSize="16sp"
                />
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password_register2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:shadowColor="@color/black"
                android:textColorHint="@color/hint"
                android:hint="@string/confirm"
                android:inputType="text|textCapWords"
                android:textSize="16sp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_sign_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:elevation="10dp"
                android:translationZ="10dp"
                android:background="@drawable/gradient_blue"
                android:backgroundTint="@color/blue"
                android:text="@string/sign_up"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/skip"
                android:gravity="center"
                style="@style/SmallLabelHint2"
                android:clickable="true"
                android:background="@color/transparent"
                android:textAllCaps="true"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_an_account"/>
                <TextView
                    android:id="@+id/bt_tap_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tap"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/lightBlue"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>