<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GlobalFragment"
    android:background="?onAccent"
    android:clipToPadding="true"
    android:clipChildren="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:clipChildren="true"
        android:clipToPadding="true"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/presented"
                style="@style/SmallLabelHint"
                android:layout_marginBottom="30dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cases"
                style="@style/SubTitle"/>
            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/ch_global1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="50dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recovered"
                style="@style/SubTitle"/>
            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/ch_global2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="50dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deaths"
                style="@style/SubTitle"/>
            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/ch_global3"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="50dp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>