<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardFragment"
    android:background="?attr/onAccent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:clipChildren="false"
        android:clipToPadding="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dashboard"
                style="@style/Title"
                android:layout_marginTop="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:clipToPadding="false"
                android:clipChildren="false">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/gradient_orange"
                    android:padding="15dp"
                    android:clipToPadding="false"
                    android:clipChildren="false">
                    <TextView
                        android:id="@+id/num_orange"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="142"
                        android:textSize="30sp"
                        android:textColor="#EAEAEA"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/num_orange"
                        android:textSize="11sp"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:text="@string/cases"
                        android:textColor="#EAEAEA"/>
                </RelativeLayout>
                <androidx.legacy.widget.Space
                    android:layout_width="10dp"
                    android:layout_height="10dp"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/gradient_green"
                    android:padding="15dp">
                    <TextView
                        android:id="@+id/num_green"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="214"
                        android:textSize="30sp"
                        android:textColor="#EAEAEA"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/num_green"
                        android:textSize="11sp"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:text="@string/recovered"
                        android:textColor="#EAEAEA"/>
                </RelativeLayout>
                <androidx.legacy.widget.Space
                    android:layout_width="10dp"
                    android:layout_height="10dp"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/gradient_red"
                    android:padding="15dp">
                    <TextView
                        android:id="@+id/num_red"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="24"
                        android:textSize="30sp"
                        android:textColor="#EAEAEA"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/num_red"
                        android:textSize="11sp"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:text="@string/deaths"
                        android:textColor="#EAEAEA"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_cases"
                    style="@style/BodyHint"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="5.140.124"
                    style="@style/BodyWhite"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_recovered"
                    style="@style/BodyHint"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="6.042.450"
                    style="@style/BodyWhite"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_deaths"
                    style="@style/BodyHint"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="346.428"
                    style="@style/BodyWhite"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/latest_news"
                style="@style/SubTitle"
                android:layout_marginTop="20dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-20dp"
                android:layout_marginEnd="-20dp">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:background="@drawable/gradient_transparent2"
                    android:translationZ="10dp"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_news"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>