<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".activity.LoginActivity"
    android:clipToPadding="false"
    android:clipChildren="false">
    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:src="@drawable/bg_what"
        android:scaleType="fitStart"
        android:alpha="0.6"
        android:scaleY="-1"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:translationZ="10dp"
        android:layout_marginBottom="-15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@drawable/rounded"
            android:gravity="end"
            android:backgroundTint="?onAccent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="30dp">
                <ImageButton
                    android:id="@+id/bt_back_login"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    style="@style/Title"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="0dp"
                android:textColor="@color/white"
                android:shadowColor="@color/black"
                android:textColorHint="@color/hint"
                android:hint="@string/email"
                android:inputType="text|textCapWords"
                android:textSize="16sp"
                />
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:shadowColor="@color/black"
                android:textColorHint="@color/hint"
                android:hint="@string/password"
                android:inputType="text|textCapWords"
                android:textSize="16sp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_sign"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                android:elevation="10dp"
                android:translationZ="10dp"
                android:background="@drawable/gradient_blue"
                android:backgroundTint="@color/blue"
                android:text="@string/sign_in"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot"/>
                <TextView
                    android:id="@+id/bt_tap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tap"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/lightBlue"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>